Added entity browsing and filtering
